Working with external js

--- a/external_js.html
+++ b/external_js.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>External JS w/ Java Cohort</title>
 </head>
 <body>
 
-<script src="js/string_methods_lecture.js"></script>
+<script src="js/external_js.js"></script>
 </body>
 </html>
