Create content in your HTML file using at least the following elements: h1, p, ul, li, div.

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,6 +5,16 @@
     <title>jQuery Exercises</title>
 </head>
 <body>
+<!--Create content in your HTML file using at least the following elements: h1, p, ul, li, div.-->
+<h1>My H1</h1>
+<p>My paragraph</p>
+<ul>
+  <li>My unordered list item one</li>
+  <li>My unordered list item two</li>
+</ul>
+<div>
+  This is my div
+</div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/my-custom-javascript.js"></script>"
