Add several attributes to your elements; you will need both id and class attributes.

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <!--Create content in your HTML file using at least the following elements: h1, p, ul, li, div.-->
-<h1>My H1</h1>
-<p>My paragraph</p>
-<ul>
-  <li>My unordered list item one</li>
-  <li>My unordered list item two</li>
+<h1 id="myh1" class="myh1">My H1</h1>
+<p id="myp" class="myp">My paragraph</p>
+<ul id="myul" class="myul">
+  <li id="myli1" class="myli1">My unordered list item one</li>
+  <li id="myli2" class="myli2">My unordered list item two</li>
 </ul>
-<div>
+<div id="mydiv" class="mydiv">
   This is my div
 </div>
 
