Use the same id on 2 elements. How does this change the jQuery selection?

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -9,8 +9,8 @@
 <h1 id="myh1" class="myh1">My H1</h1>
 <p id="myp" class="myp">My paragraph</p>
 <ul id="myul" class="myul">
-  <li id="myli1" class="myli1">My unordered list item one</li>
-  <li id="myli2" class="myli2">My unordered list item two</li>
+  <li id="myli" class="myli">My unordered list item one</li>
+  <li id="myli" class="myli">My unordered list item two</li>
 </ul>
 <div id="mydiv" class="mydiv">
   This is my div
