--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <!--Create content in your HTML file using at least the following elements: h1, p, ul, li, div.-->
-<h1 id="myh1" class="myh1">My H1</h1>
-<p id="myp" class="myp">My paragraph</p>
-<ul id="myul" class="myul">
+<!--Update your code so that at least 3 different elements have the same class named codeup.-->
+<h1 id="myh1" class="codeup">My H1</h1>
+<p id="myp" class="codeup">My paragraph</p>
+<ul id="myul" class="codeup">
 <!--    Remove the duplicate id. Each id should be unique on that page.-->
   <li id="myli1" class="myli">My unordered list item one</li>
   <li id="myli2" class="myli">My unordered list item two</li>
