Remove the class from one of the elements. Refresh and test that the border has been removed.

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -9,7 +9,10 @@
 <!--Update your code so that at least 3 different elements have the same class named codeup.-->
 <h1 id="myh1" class="codeup">My H1</h1>
 <p id="myp" class="codeup">My paragraph</p>
-<ul id="myul" class="codeup">
+<!--Remove the class from one of the elements. Refresh and test that the border has been removed.
+    Answer: it does remove the border
+-->
+<ul id="myul" class="myul">
 <!--    Remove the duplicate id. Each id should be unique on that page.-->
   <li id="myli1" class="myli">My unordered list item one</li>
   <li id="myli2" class="myli">My unordered list item two</li>
