Give another element an id of codeup. Does this element get a border now?

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -17,7 +17,10 @@
   <li id="myli1" class="myli">My unordered list item one</li>
   <li id="myli2" class="myli">My unordered list item two</li>
 </ul>
-<div id="mydiv" class="mydiv">
+<!--Give another element an id of codeup. Does this element get a border now?
+    Answer: no because jQuery only targeting elements with class 'codeup' no ids
+-->
+<div id="codeup" class="mydiv">
   This is my div
 </div>
 
