--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .invisible{
+            visibility: hidden;
+        }
+    </style>
 </head>
 <body>
     <!--STEP 2 : In a HTML structure, create a definition list containing 10 FAQs about national parks.-->
