--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -106,6 +106,56 @@
         <dd  class="invisible">
             #10 in Best U.S. National Parks - Stretching across 500,000-plus acres in North Carolina and Tennessee, Great Smoky Mountains National Park offers ample opportunities for wildlife-viewing and hiking, including the popular Roaring Fork Motor Nature Trail and Chimney Tops trail. The mountains are also home to more than 1,500 types of plants and flowers, which visitors can see in the spring when the national park hosts a festival of programs and guided hikes to see the blooms. Meanwhile, those interested in a fall visit will be greeted with colorful foliage among the trees that line the hiking trails.
         </dd>
+
+<!--      TRAVERSING Step 2:
+          Under the FAQ, add 3 unordered lists like above.
+          Each list should contain a national park name in an
+          h3 element, and a ul of 4 facts about the park.-->
+        <h3>Yosemite</h3>
+        <ul>
+            <li>
+                Yosemite might be our nation’s 3rd national park, but it sparked the idea of national parks.
+            </li>
+            <li>
+                Yosemite’s granite rock formations glow like fire at sunset.
+            </li>
+            <li>
+                The park’s diverse landscape supports more than 400 species.
+            </li>
+            <li>
+                Yosemite is home to one of the tallest waterfalls in the world.
+            </li>
+        </ul>
+        <h3>Yellowstone</h3>
+        <ul>
+            <li>
+                Yellowstone encompasses 3,472 square miles (2,221,766 acres) which makes it larger than Rhode Island and Delaware combined.
+            </li>
+            <li>
+                There are more than 10,000 hydrothermal features in Yellowstone. The four types of thermal features are geysers, hot springs, mud pots, and fumaroles.
+            </li>
+            <li>
+                Yellowstone is home to more than 500 active geysers (more than half the world’s geysers).
+            </li>
+            <li>
+                Yellowstone Lake has 131.7 sq. miles of surface area and 141 miles of shoreline. It is the largest high elevation lake in North America.
+            </li>
+        </ul>
+        <h3>Glacier National Park</h3>
+        <ul>
+            <li>
+                Glacier National Park is a part of the world’s first international peace park.
+            </li>
+            <li>
+                Glacier straddles the Continental Divide, allowing for extreme weather.
+            </li>
+            <li>
+                Going-to-the-Sun Road is a spectacular marvel and a must see on your trip to Glacier.
+            </li>
+            <li>
+                Evidence of human use in the area dates back over 12,000 years.
+            </li>
+        </ul>
     </dl>
 
 </body>
