Intro to HTML - Exercises Step 1 & 2 Complete

--- a/welcome.html
+++ b/welcome.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+    Hello, World!
 <script src="js/string_methods_lecture.js"></script>
 </body>
 </html>
