--- a/welcome.html
+++ b/welcome.html
@@ -5,7 +5,128 @@
     <title>Title</title>
 </head>
 <body>
-    Hello, World!
+    <header id="head">
+        <h2>Welcome to Veridian Dynamics!</h2>
+    </header>
+    <nav>
+        At Veridian Dynamics, we solve your problems with <em><strong>technology</strong></em>
+    </nav>
+    <hr/>
+    <main>
+        <section>
+            <article>
+                <h2>Core Values</h2>
+                <ul>
+                    <li>Competence</li>
+                    <li>Involvement</li>
+                    <li>Technology</li>
+                </ul>
+            </article>
+            <article>
+                <h2>Our Process</h2>
+                <ol>
+                    <li>
+                        Plan
+                    </li>
+                    <li>
+                        Evaluate
+                    </li>
+                    <li>
+                        Implement
+                    </li>
+                </ol>
+            </article>
+            <article>
+                <h2>2020 Vision</h2>
+                <ul>
+                    <li>
+                        Become #1 in Technology
+                    </li>
+                    <li>
+                        Increase Success by 20%
+                    </li>
+                    <li>
+                        Increase Business by 30%
+                    </li>
+                </ul>
+            </article>
+        </section>
+        <hr>
+        <section>
+            <article>
+                <h2>Company Vision</h2>
+                <table width="100%">
+                    <tr>
+                        <td>
+                            <img src="http://placeholder.pics/svg/200" width="100%" height="100%"/>
+                        </td>
+                        <td>
+                            <img src="http://placeholder.pics/svg/200" width="100%" height="100%"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="http://placeholder.pics/svg/200" width="100%" height="100%"/>
+                        </td>
+                        <td>
+                            <img src="http://placeholder.pics/svg/200" width="100%" height="100%"/>
+                        </td>
+                    </tr>
+                </table>
+            </article>
+            <article>
+                <h2>Our Product</h2>
+                <table>
+                <th>
+                    Plan
+                </th>
+                <th>
+                    Price
+                </th>
+                <th>
+                    Features
+                </th>
+                <tr>
+                    <td>
+                        Starter
+                    </td>
+                    <td>
+                        $99
+                    </td>
+                    <td>
+                        Base Technology
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Advanced
+                    </td>
+                    <td>
+                        $199
+                    </td>
+                    <td>
+                        Additional Features
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Premium
+                    </td>
+                    <td>
+                        $499
+                    </td>
+                    <td>
+                        Unlimited Support
+                    </td>
+                </tr>
+                </table>
+                <br>
+                <i>All products come with our quality guarantee&trade;</i>
+                <br><br>
+                <a href="#head">Go to the top of page</a>
+            </article>
+        </section>
+    </main>
 <script src="js/string_methods_lecture.js"></script>
 </body>
 </html>
