Using what you have learned in the previous lessons, add the necessary HTML document structure to the page with a title of: Register With Us.

--- a/github.html
+++ b/github.html
@@ -27,7 +27,7 @@
   <main>
     <section>
       <nav>
-        <img src="http://placeholder.pics/svg/40" width="40px"/>
+        <img src="http://placeholder.pics/svg/48" width="48px"/>
         <h2>Codup</h2>
         <ul>
           <li>
@@ -55,7 +55,7 @@
         </tr>
         <tr>
           <td>
-            <img src="http://placeholder.pics/svg/48" width="48px"/>
+            <img src="https://fer-uig.glitch.me" alt="user-icon" width="48px"/>
             <a href="/profiles/kent_beck">Kent Beck</a>
             <div>Kent Beck</div>
             <div>Member</div>
@@ -64,7 +64,7 @@
         </tr>
         <tr>
           <td>
-            <img src="http://placeholder.pics/svg/48" width="48px"/>
+            <img src="https://fer-uig.glitch.me" alt="user-icon" width="48px"/>
             <a href="/profiles/kent_beck">Codeup Staff</a>
             <div>Codeup Staff</div>
             <div>Member</div>
@@ -73,7 +73,7 @@
         </tr>
         <tr>
           <td>
-            <img src="http://placeholder.pics/svg/48" width="48px"/>
+            <img src="https://fer-uig.glitch.me" alt="user-icon" width="48px"/>
             <a href="/profiles/kent_beck">Martin F</a>
             <div>MartinF</div>
             <div>Member</div>
