fixed pics in welcome.html

--- a/forms.html
+++ b/forms.html
@@ -5,7 +5,7 @@
     <title>Register With Us</title>
 </head>
 <body>
-    <form>
+    <form method="POST" action="https://request-inspector.glitch.me/">
 
     </form>
 </body>
