--- a/welcome.html
+++ b/welcome.html
@@ -55,21 +55,21 @@
         <section>
             <article>
                 <h2>Company Vision</h2>
-                <table width="100%">
+                <table>
                     <tr>
                         <td>
-                            <img src="http://placeholder.pics/svg/200" width="100%" height="100%"/>
+                            <img src="http://placeholder.pics/svg/200" width="100%"/>
                         </td>
                         <td>
-                            <img src="http://placeholder.pics/svg/200" width="100%" height="100%"/>
+                            <img src="http://placeholder.pics/svg/200" width="100%" />
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <img src="http://placeholder.pics/svg/200" width="100%" height="100%"/>
+                            <img src="http://placeholder.pics/svg/200" width="100%" />
                         </td>
                         <td>
-                            <img src="http://placeholder.pics/svg/200" width="100%" height="100%"/>
+                            <img src="http://placeholder.pics/svg/200" width="100%"/>
                         </td>
                     </tr>
                 </table>
