Create text fields for email and password with appropriate placeholder values.

--- a/forms.html
+++ b/forms.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     <form method="POST" action="https://request-inspector.glitch.me/">
-
+        <label for="email">
+            <input type="email" id="email" name="email" placeholder="Email"/>
+        </label>
+        <label for="password">
+            <input type="password" id="password" name="password" placeholder="Password"/>
+        </label>
     </form>
 </body>
 </html>
