--- a/forms.html
+++ b/forms.html
@@ -9,8 +9,13 @@
         <label for="email">
             <input type="email" id="email" name="email" placeholder="Email"/>
         </label>
+        <br>
         <label for="password">
             <input type="password" id="password" name="password" placeholder="Password"/>
+        </label>
+        <br>
+        <label for="bio">
+            <textarea id="bio" name="bio" placeholder="Bio" cols="15"></textarea>
         </label>
     </form>
 </body>
