What happens if the inputs are given different name attributes?

--- a/forms.html
+++ b/forms.html
@@ -24,8 +24,8 @@
                 <fieldset>
                     <legend>How did you hear about us?</legend>
                     <input name="source" type="radio" value="billboard" selected>Billboard</input>
-                    <input name="source" type="radio" value="radio advertisement">Radio Advertisement</input>
-                    <input name="source" type="radio" value="internet advertisement">Internet Advertisement</input>
+                    <input name="source1" type="radio" value="radio advertisement">Radio Advertisement</input>
+                    <input name="source2" type="radio" value="internet advertisement">Internet Advertisement</input>
                 </fieldset>
             </section>
 
