--- a/forms.html
+++ b/forms.html
@@ -23,9 +23,9 @@
             <section>
                 <fieldset>
                     <legend>How did you hear about us?</legend>
-                    <input name="source" type="radio" value="billboard" selected>Billboard</input>
-                    <input name="source1" type="radio" value="radio advertisement">Radio Advertisement</input>
-                    <input name="source2" type="radio" value="internet advertisement">Internet Advertisement</input>
+                    <input name="source_0" type="radio" value="billboard" selected>Billboard</input>
+                    <input name="source_1" type="radio" value="radio advertisement">Radio Advertisement</input>
+                    <input name="source_2" type="radio" value="internet advertisement">Internet Advertisement</input>
                 </fieldset>
             </section>
 
