Create a dropdown that asks the user what web browser they are using.

--- a/forms.html
+++ b/forms.html
@@ -27,6 +27,15 @@
                     <input name="source_1" type="radio" value="radio advertisement">Radio Advertisement</input>
                     <input name="source_2" type="radio" value="internet advertisement">Internet Advertisement</input>
                 </fieldset>
+                <label for="browser">
+                    What browser are you using?
+                    <select name="browser" id="browser">
+                        <option value="chrome">Chrome</option>
+                        <option value="safari">Safari</option>
+                        <option value="firefox">FireFox</option>
+                        <option value="opera">Opera</option>
+                    </select>
+                </label>
             </section>
 
         </form>
