Add a class of fancy-header to your h1 element, and create an embedded stylesheet and based on the example above. What color is the h1 after creating the embedded stylesheet? Remove the style attribute from your h1 and view the page again.

--- a/forms.html
+++ b/forms.html
@@ -23,9 +23,9 @@
             <section>
                 <fieldset>
                     <legend>How did you hear about us?</legend>
-                    <input name="source_0" type="radio" value="billboard" selected>Billboard</input>
-                    <input name="source_1" type="radio" value="radio advertisement">Radio Advertisement</input>
-                    <input name="source_2" type="radio" value="internet advertisement">Internet Advertisement</input>
+                    <label><input name="source_0" type="radio" value="billboard" selected>Billboard</label>
+                    <label><input name="source_1" type="radio" value="radio advertisement">Radio Advertisement</label>
+                    <label><input name="source_2" type="radio" value="internet advertisement">Internet Advertisement</label>
                 </fieldset>
                 <label for="browser">
                     What browser are you using?
@@ -37,7 +37,7 @@
                     </select>
                 </label>
             </section>
-
+            <input type="submit"/>
         </form>
     </main>
 </body>
