--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header id="head">
-        <h2>Welcome to Veridian Dynamics!</h2>
+        <h1 style="color: red">Welcome to Veridian Dynamics!</h1>
     </header>
     <nav>
         At Veridian Dynamics, we solve your problems with <em><strong>technology</strong></em>
