Create a directory named css in your project. Within this directory, create a file named style.css, and include a link to it in your html document.

--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link ref="stylesheet" href="css/style.css"/>
+    <style>
+        /*
+            multi
+            line
+            comment
+        */
+        .fancy-header {
+            color: blue; /* single line comment */
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <header id="head">
-        <h1 style="color: red">Welcome to Veridian Dynamics!</h1>
+        <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
     </header>
     <nav>
         At Veridian Dynamics, we solve your problems with <em><strong>technology</strong></em>
