Inside of style.css, copy the above css, but change to font color to purple. What color is the h1 after making this change? Remove your embedded stylesheet and view the page again.

--- a/welcome.html
+++ b/welcome.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link ref="stylesheet" href="css/style.css"/>
-    <style>
-        /*
-            multi
-            line
-            comment
-        */
-        .fancy-header {
-            color: blue; /* single line comment */
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css"/>
+<!--    <style>-->
+<!--        /*-->
+<!--            multi-->
+<!--            line-->
+<!--            comment-->
+<!--        */-->
+<!--        .fancy-header {-->
+<!--            color: blue; /* single line comment */-->
+<!--            text-decoration: underline;-->
+<!--        }-->
+<!--    </style>-->
 </head>
 <body>
     <header id="head">
