review monday sep 26

--- a/welcome.html
+++ b/welcome.html
@@ -16,15 +16,12 @@
 
     <main>
         <section>
-            <article>
                 <h2>Core Values</h2>
                 <ul>
                     <li>Competence</li>
                     <li>Involvement</li>
                     <li>Technology</li>
                 </ul>
-            </article>
-            <article>
                 <h2>Our Process</h2>
                 <ol>
                     <li>
@@ -37,8 +34,6 @@
                         Implement
                     </li>
                 </ol>
-            </article>
-            <article>
                 <h2>2020 Vision</h2>
                 <ul>
                     <li>
@@ -51,32 +46,28 @@
                         Increase Business by 30%
                     </li>
                 </ul>
-            </article>
         </section>
         <hr>
         <section>
-            <article>
                 <h2>Company Vision</h2>
                 <table>
                     <tr>
                         <td>
-                            <img src="http://placeholder.pics/svg/200" width="100%"/>
+                            <img src="http://placeholder.pics/svg/200" width="100%" alt="image one"/>
                         </td>
                         <td>
-                            <img src="http://placeholder.pics/svg/200" width="100%" />
+                            <img src="http://placeholder.pics/svg/200" width="100%" alt="image two"/>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <img src="http://placeholder.pics/svg/200" width="100%" />
+                            <img src="http://placeholder.pics/svg/200" width="100%" alt="image three"/>
                         </td>
                         <td>
-                            <img src="http://placeholder.pics/svg/200" width="100%"/>
+                            <img src="http://placeholder.pics/svg/200" width="100%" alt="image four"/>
                         </td>
                     </tr>
                 </table>
-            </article>
-            <article>
                 <h2>Our Product</h2>
                 <table>
                 <th>
@@ -126,7 +117,6 @@
                 <i>All products come with our quality guarantee&trade;</i>
                 <br><br>
                 <a href="#head">Go to the top of page</a>
-            </article>
         </section>
     </main>
 <script src="js/string_methods_lecture.js"></script>
