--- a/order-pizza.html
+++ b/order-pizza.html
@@ -16,26 +16,19 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Order Online</a>
-            </li>
-              <a class="nav-link" href="#">Menu</a>
-            </li>
-            <li class="nav-item">
-              <form class="d-flex">
-                <input type="textbox form-control me-2" placeholder="Zip Code" aria-label="Zip Code">
-                &nbsp;
-                <button class="btn btn-outline-primary" type="submit">Search stores near you!</button>
-              </form>
-            </li>
-          </ul>
+      <div class="collapse navbar-collapse navbar-nav" id="navbarSupportedContent">
+        <a class="nav-link active nav-item" href="#">Order Online</a>
+        <a class="nav-link nav-item" href="#">Menu</a>
+        <form class="d-flex nav-item">
+          <input type="textbox form-control me-2" placeholder="Zip Code" aria-label="Zip Code">
+          &nbsp;
+          <button class="btn btn-outline-primary" type="submit">Search stores near you!</button>
+        </form>
+        <button class="btn ms-auto nav-item ms-auto" type="submit">
+          <i class="bi-person-fill" style="color: black;"></i>
+          Sign Up!
+        </button>
       </div>
-      <button class="btn float-right" type="submit">
-        <i class="bi-person-fill" style="color: black;"></i>
-        Sign Up!
-      </button>
     </div>
   </nav>
   <div class="container mb-5">
